<resources>
    <string name="app_name">GBWeatherApp</string>
    <string name="title_home">Список городов</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorites">Избранное</string>
    <string name="temperature">Температура</string>
    <string name="feels_like">Ощущается как</string>
    <string name="humidity">Влажность</string>
    <string name="pressure">Давление (в мм рт. ст.)</string>
    <string name="wind_speed">Скорость ветра (в м/с)</string>
    <string name="back">Назад</string>
    <string name="reload">Повторить?</string>
    <string name="load_completed">Данные успешно загружены</string>

    <string name="threads">Threads</string>
    <string name="in_main_thread">В главном потоке</string>
    <string name="from_thread">Из потока %d</string>
    <string name="in_thread">Выводим в потоке %s</string>
    <string name="calculate_in_thread">Считаем в потоке %s</string>
    <string name="my_handler_thread">My_Handler_Thread</string>
    <string name="hello_from_thread_fragment">Hello from ThreadsFragment</string>
    <string name="calculate">Расчёт</string>
    <string name="default_number">1</string>
    <string name="calc_in_thread">Расчёт в потоке</string>
    <string name="handler_thread">Handler_Thread</string>
    <string name="service">Service</string>
    <string name="service_broadcast">Service + Broadcast</string>
    <string name="phenom_condition">Погодные условия</string>
    <string name="prec_type">Тип осадков</string>
    <string name="clean_room">Очистить Избранное</string>
    <string name="add_history">Сохранить History</string>
    <string name="show_history">Показать History</string>
    <string name="authorities">jt.projects.contentprovider</string>
    <string name="need_permission_header">Требуется настройка</string>
    <string name="need_permission_text">Необходимы разрешения для просмотра списка контактов и телефонов</string>
    <string name="need_permission_text_again">Ну а теперь идите в настройки и выдавайте разрешения вручную, раз такие умные</string>
    <string name="need_permission_give">Да</string>
    <string name="need_permission_dont_give">Нет</string>

    <string name="call">Выберите телефон для звонка</string>
    <string name="home">Домашний</string>
    <string name="mobile">Мобильный</string>
    <string name="work">Рабочий</string>
    <string name="other">Другой</string>
    <string name="btn_beginner_expl">Взят код фрагмента ContentProviderFragment с урока 9, в него добавили получение номера(функция getNumberFromID) и сам звонок( функция makeCall)</string>
    <string name="btn_advanced_expl">Примерно то же самое, но на контрактах, и чуть больше фукций добавлено( например: научились разлачать Домашний Мобильный Рабочий номера, или когда его нет вовсе)</string>
    <string name="beginner">beginner</string>
    <string name="advanced">advanced</string>

    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>


</resources>